--- a/love-mail/src/Template/mail.ejs
+++ b/love-mail/src/Template/mail.ejs
@@ -5,10 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Love</title>
-        <link rel="stylesheet" href="/css/index.css" type="text/css">
+        <style>
+            body {
+                background-color: black;
+            }
+            p {
+                background: blue;
+                font-size: 30px;
+            }
+        </style>
     </head>
     <body>
-        <p>我宣你</p>
+        <p>我宣你1111</p>
         <p>Welcome, your activation code is <%= locals.code %></p>
         <img src="https://dss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2903795984,3730028115&fm=26&gp=0.jpg" alt="">
     </body>
